--- a/webclient/README
+++ b/webclient/README
@@ -3,7 +3,7 @@ YaST-Webservice-Client
 After you have installed the package you can start the lighthttp with the
 command line:
 
-startproc /usr/sbin/lighttpd -f /srv/www/yast/config/lighttpd.conf
+rcyastwebc start
 
 
 You can connect to the local server which can be started with the command:
