--- a/webclient/README
+++ b/webclient/README
@@ -8,7 +8,7 @@ rcyastwebc start
 
 You can connect to the local server which can be started with the command:
 
-rcyastwebd start
+rcyastwebs start
 
 (package yast2-webservice)
 
