--- a/webclient/README
+++ b/webclient/README
@@ -42,6 +42,6 @@ ssl.pemfile        = "/etc/ssl/certs/host.pem"
 
 and restart the server with
 
-rcyastwebc restart
+rcyastwc restart
 
 Now you can login with HTTPS protocol.
