--- a/systemtime-plugin/src/README
+++ b/systemtime-plugin/src/README
@@ -1,7 +1,7 @@
 Systemtime
 ==========
 
-REST interface for setting time and date.
+Plugin for setting system time.
 
 
 Copyright (c) 2009 Novell, released under the MIT license
