--- a/plugins/users/po/de/yast_webclient_users.po
+++ b/plugins/users/po/de/yast_webclient_users.po
@@ -18,19 +18,19 @@ msgstr ""
 
 #: app/controllers/users_controller.rb:122
 msgid "User was successfully created."
-msgstr ""
+msgstr "Benutzer wurde angelegt."
 
 #: app/controllers/users_controller.rb:170
 msgid "SSH-Key was successfully exported."
-msgstr ""
+msgstr "SSH-Key wurde exportiert."
 
 #: app/controllers/users_controller.rb:172
 msgid "User was successfully updated."
-msgstr ""
+msgstr "Benutzerdaten wurden geändert."
 
 #: app/views/users/index.html.erb:1
 msgid "Local User"
-msgstr ""
+msgstr "Lokale Benutzer"
 
 #: app/views/users/index.html.erb:9
 msgid "Login"
@@ -38,7 +38,7 @@ msgstr ""
 
 #: app/views/users/index.html.erb:10
 msgid "Edit"
-msgstr ""
+msgstr "Ändern"
 
 #: app/views/users/index.html.erb:12 app/views/users/index.html.erb:15
 msgid "SSH-Key"
@@ -46,35 +46,35 @@ msgstr ""
 
 #: app/views/users/index.html.erb:13
 msgid "Delete"
-msgstr ""
+msgstr "Löschen"
 
 #: app/views/users/index.html.erb:30
 msgid "Are you sure?"
-msgstr ""
+msgstr "Sind Sie sicher ?"
 
 #: app/views/users/index.html.erb:38
 msgid "<strong>[New User]</strong>"
-msgstr ""
+msgstr "[neuer Benutzer]"
 
 #: app/views/users/edit.html.erb:1
 msgid "Edit User"
-msgstr ""
+msgstr "Benutzer ändern"
 
 #: app/views/users/edit.html.erb:11 app/views/users/exportssh.html.erb:11
 msgid "User"
-msgstr ""
+msgstr "Benutzer"
 
 #: app/views/users/edit.html.erb:14 app/views/users/new.html.erb:14
 msgid "Full Name"
-msgstr ""
+msgstr "Name"
 
 #: app/views/users/edit.html.erb:18 app/views/users/new.html.erb:18
 msgid "Groups"
-msgstr ""
+msgstr "Gruppe"
 
 #: app/views/users/edit.html.erb:22 app/views/users/new.html.erb:22
 msgid "Default Group"
-msgstr ""
+msgstr "Standardgruppe"
 
 #: app/views/users/edit.html.erb:26 app/views/users/new.html.erb:26
 #: app/views/users/exportssh.html.erb:18
@@ -96,7 +96,7 @@ msgstr ""
 
 #: app/views/users/edit.html.erb:42 app/views/users/new.html.erb:46
 msgid "Password"
-msgstr ""
+msgstr "Paßwort"
 
 #: app/views/users/edit.html.erb:46
 msgid "Update"
@@ -105,23 +105,23 @@ msgstr ""
 #: app/views/users/edit.html.erb:46 app/views/users/new.html.erb:50
 #: app/views/users/exportssh.html.erb:26
 msgid "Back"
-msgstr ""
+msgstr "Zurück"
 
 #: app/views/users/new.html.erb:1
 msgid "New User"
-msgstr ""
+msgstr "Neuer Benutzer"
 
 #: app/views/users/new.html.erb:30
 msgid "do NOT create home directory"
-msgstr ""
+msgstr "Home directory nicht erzeugen"
 
 #: app/views/users/new.html.erb:50
 msgid "Create"
-msgstr ""
+msgstr "Speichern"
 
 #: app/views/users/exportssh.html.erb:1 app/views/users/exportssh.html.erb:26
 msgid "Export SSH-Key"
-msgstr ""
+msgstr "SSH-Key exportieren"
 
 #: app/views/users/exportssh.html.erb:22
 msgid "SHH Key"
