--- a/webclient/test/ui/README
+++ b/webclient/test/ui/README
@@ -2,9 +2,9 @@ Here are UI testing scripts using Selenium framework (http://seleniumhq.org)
 
 Basic information:
 
-1. run 'rake test:ui' to start UI tests
-2. the tests have been generated from *.xml files by Selenium IDE
-   (do not edit them directly, use Selenium IDE for changes and export the tests)
+1. run 'rake test:ui' to start UI tests (or 'rake test:ui TEST=ui/example_test.rb')
+2. the tests have been generated from src/*.xml files by Selenium IDE
+   (do not edit *.rb files directly, load *.xml file into Selenium IDE, change it and export the tests)
 
 See http://en.opensuse.org/YaST/Web/Development/UI_Testing for more information.
 
