rake test:ui TEST=test/ui/permission_test.rb .... runs selenium together with sinatra

--- a/webclient/test/dummy-host/README
+++ b/webclient/test/dummy-host/README
@@ -1,7 +1,7 @@
 His is an emulation of the webYaST REST interface by using "sinatra"
 (http://www.sinatrarb.com/)
 
-Just call "ruby dummy-host.rb" in order to start the REST servive.
+Just call "ruby host.rb" in order to start the REST servive.
 
 Then you have access to the URL:
 
