--- a/webclient/test/dummy-host/README
+++ b/webclient/test/dummy-host/README
@@ -1,4 +1,4 @@
-His is an emulation of the webYaST REST interface by using "sinatra"
+This is an emulation of the webYaST REST interface by using "sinatra"
 (http://www.sinatrarb.com/)
 
 Just call "ruby host.rb" in order to start the REST servive.
