cleanup translations in system plugin; use plugin translation in the dev. environment

--- a/webclient/po/de/yast_webclient.po
+++ b/webclient/po/de/yast_webclient.po
@@ -301,18 +301,16 @@ msgid "Loading patch information"
 msgstr ""
 
 #: app/views/controlpanel/index.rhtml:45
-#, fuzzy
 msgid "Patch plugin is not installed."
-msgstr "Patch wurde installiert."
+msgstr "Patch Plugin ist nicht installiert"
 
 #: app/views/controlpanel/index.rhtml:51
 msgid "Loading system information"
 msgstr ""
 
 #: app/views/controlpanel/index.rhtml:53
-#, fuzzy
 msgid "Status plugin is not installed."
-msgstr "Patch wurde installiert."
+msgstr "Status Plugin ist nicht installiert."
 
 #: app/views/controlpanel/index.rhtml:92
 msgid "Show all modules"
@@ -322,223 +320,3 @@ msgstr ""
 msgid "Noone is logged to rest service."
 msgstr ""
 
-#~ msgid "URL"
-#~ msgstr "URL"
-
-#~ msgid "Update"
-#~ msgstr "Speichern"
-
-#~ msgid "New YaST-Web-Service"
-#~ msgstr "YaST-Web-Service anlegen"
-
-#~ msgid "Services"
-#~ msgstr "Systemdienste"
-
-#~ msgid "Language"
-#~ msgstr "Sprache"
-
-#~ msgid "Users"
-#~ msgstr "Benutzer"
-
-#~ msgid "Permissions"
-#~ msgstr "Zugriffsrechte"
-
-#~ msgid "Patches"
-#~ msgstr "Update"
-
-#~ msgid "Session"
-#~ msgstr "Sitzung"
-
-#~ msgid "Login Failed"
-#~ msgstr "Anmeldung fehlgeschlagen"
-
-#~ msgid "Connect"
-#~ msgstr "Verbinden"
-
-#~ msgid "Permission has been granted."
-#~ msgstr "Das Recht wurde gegeben."
-
-#~ msgid "Permission has been revoked."
-#~ msgstr "Das Recht wurde entzogen."
-
-#~ msgid "Available Patches"
-#~ msgstr "Verfügbare Update"
-
-#~ msgid "Kind"
-#~ msgstr "Typ"
-
-#~ msgid "Summary"
-#~ msgstr "Zusammenfassung"
-
-#~ msgid "Source"
-#~ msgstr "Quelle"
-
-#~ msgid "Install"
-#~ msgstr "Installiere"
-
-#~ msgid "YaST-Web-Services"
-#~ msgstr "YaST-Web-Services"
-
-#~ msgid "<strong>[New YaST-Web-Service]</strong>"
-#~ msgstr "<strong>[Neuer YaST-Web-Service]</strong>"
-
-#~ msgid "<strong>[Configure]</strong>"
-#~ msgstr "<strong>[konfigurieren]</strong>"
-
-#~ msgid "Choose host"
-#~ msgstr "Rechner auswählen"
-
-#~ msgid "INFO"
-#~ msgstr "INFO"
-
-#~ msgid "This is a sample web-UI for YaST-as-a-webservice."
-#~ msgstr ""
-#~ "Dies ist ein Beispielprogramm zur Demonstration der YaST-REST-"
-#~ "Schnittstelle"
-
-#~ msgid "Authors"
-#~ msgstr "Autoren"
-
-#~ msgid "Others"
-#~ msgstr "Andere"
-
-#~ msgid "Links"
-#~ msgstr "Links"
-
-#~ msgid "About YaST"
-#~ msgstr "Über YaST"
-
-#~ msgid "About Rails"
-#~ msgstr "Über Rails"
-
-#~ msgid "About used CSS"
-#~ msgstr "Benutztes CSS"
-
-#~ msgid "About used icons"
-#~ msgstr "Benutzte Icons"
-
-#~ msgid "About PolicyKit"
-#~ msgstr "Über PolicyKit"
-
-#~ msgid "User Permissions"
-#~ msgstr "Zugriffsrechte"
-
-#~ msgid "Search"
-#~ msgstr "Suche"
-
-#~ msgid "Revoked Permissions"
-#~ msgstr "Gesperrte Rechte"
-
-#~ msgid "Granted Permissions"
-#~ msgstr "Zulässige Rechte"
-
-#~ msgid "Settings have been written."
-#~ msgstr "Einstellungen wurden gespeichert."
-
-#~ msgid "failed"
-#~ msgstr "fehlgeschlagen"
-
-#~ msgid "success"
-#~ msgstr "erfolgreich"
-
-#~ msgid "User was successfully created."
-#~ msgstr "Benutzer wurde angelegt."
-
-#~ msgid "SSH-Key was successfully exported."
-#~ msgstr "SSH-Schlüssel wurde exportiert."
-
-#~ msgid "User was successfully updated."
-#~ msgstr "Benutzereinstellungen wurde verändert."
-
-#~ msgid "Local User"
-#~ msgstr "Lokale Benutzer"
-
-#~ msgid "SSH-Key"
-#~ msgstr "SSH-Schlüssel"
-
-#~ msgid "<strong>[New User]</strong>"
-#~ msgstr "<strong>[Neuer Benutzer]</strong>"
-
-#~ msgid "Edit User"
-#~ msgstr "Benutzer ändern"
-
-#~ msgid "Full Name"
-#~ msgstr "Kompletter Name"
-
-#~ msgid "Groups"
-#~ msgstr "Gruppen"
-
-#~ msgid "Default Group"
-#~ msgstr "Standardgruppe"
-
-#~ msgid "Home Directory"
-#~ msgstr "Home-Verzeichnis"
-
-#~ msgid "Login Shell"
-#~ msgstr "Login Shell"
-
-#~ msgid "Login Name"
-#~ msgstr "Login Name"
-
-#~ msgid "UID"
-#~ msgstr "UID"
-
-#~ msgid "New User"
-#~ msgstr "Neuer Benutzer"
-
-#~ msgid "do NOT create home directory"
-#~ msgstr "Home-Verzeichnis nicht anlegen"
-
-#~ msgid "Export SSH-Key"
-#~ msgstr "SSH-Schlüssel exportieren"
-
-#~ msgid "SHH Key"
-#~ msgstr "SSH-Schlüssel"
-
-#~ msgid "NTP Server"
-#~ msgstr "NTP Server"
-
-#~ msgid "Settings"
-#~ msgstr "Einstellungen"
-
-#~ msgid "Enabled"
-#~ msgstr "Aktiviert"
-
-#~ msgid "Use random server"
-#~ msgstr "Verwende zufälligen Server"
-
-#~ msgid "Manual Servers"
-#~ msgstr "Feste Server"
-
-#~ msgid "Service Call Result"
-#~ msgstr "Ergebnis"
-
-#~ msgid "Result"
-#~ msgstr "Ergebnis"
-
-#~ msgid "Timezone"
-#~ msgstr "Zeitzone"
-
-#~ msgid "UTC (Universal Time Coordinated)"
-#~ msgstr "UTC (Universal Time Coordinated)"
-
-#~ msgid "Day"
-#~ msgstr "Tag"
-
-#~ msgid "Month"
-#~ msgstr "Monat"
-
-#~ msgid "Year"
-#~ msgstr "Jahr"
-
-#~ msgid "Time"
-#~ msgstr "Zeit"
-
-#~ msgid "First Language"
-#~ msgstr "Hauptsprache"
-
-#~ msgid "Second Languages"
-#~ msgstr "zusätzliche Sprachen"
-
-#~ msgid "This operation can take a while."
-#~ msgstr "Dies kann ein wenig dauern...."
