--- a/plugins/language/shortcuts.yml
+++ b/plugins/language/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-language.png'
   url: /language
-  groups: [ Other ]
+  groups: [ System ]
   tags: [ language ]
   title: Language
   description: Set language
