--- a/plugins/administrator/po/pl/yast_webclient_administrator.po
+++ b/plugins/administrator/po/pl/yast_webclient_administrator.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2009-10-04 19:53+0100\n"
+"PO-Revision-Date: 2009-10-27 20:02+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -32,10 +32,9 @@ msgid "Passwords do not match."
 msgstr "Hasła nie zgadzają się."
 
 #: app/controllers/administrator_controller.rb:76
-#, fuzzy
 #| msgid "Error while closing old shadow file: %m"
 msgid "Error while saving administrator settings: %s"
-msgstr "Błąd podczas zamykania starego pliku shadow: %m"
+msgstr "Wystąpił błąd podczas zapisu ustawień administracyjnych: %s"
 
 #: app/views/administrator/index.html.erb:38
 msgid "Administrator Settings"
@@ -58,3 +57,4 @@ msgstr "Zapisz"
 #: app/views/administrator/index.html.erb:56
 msgid "Forward mail to"
 msgstr "Przekazać pocztę do"
+
