--- a/plugins/patch_updates/po/pl/yast_webclient_patch_updates.po
+++ b/plugins/patch_updates/po/pl/yast_webclient_patch_updates.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2009-10-04 20:29+0100\n"
+"PO-Revision-Date: 2009-10-27 20:16+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,10 +31,9 @@ msgid "Installation finished"
 msgstr "Zakończono instalację"
 
 #: app/controllers/patch_updates_controller.rb:108
-#, fuzzy
 #| msgid "%s installed ok"
 msgid "%s installed."
-msgstr "Pakiet %s poprawnie zainstalowany"
+msgstr "%s zainstalowany."
 
 #: app/controllers/patch_updates_controller.rb:137
 msgid "Patch has been installed."
@@ -83,22 +82,19 @@ msgid "No information about patches available"
 msgstr "Brak dostępnych informacji o uaktualnieniach"
 
 #: app/views/patch_updates/_patch_summary.html.erb:19
-#, fuzzy
 #| msgid "Security update"
 msgid "Security Updates: %d"
-msgstr "Aktualizacja bezpieczeństwa"
+msgstr "Aktualizacje bezpieczeństwa: %d"
 
 #: app/views/patch_updates/_patch_summary.html.erb:22
-#, fuzzy
 #| msgid "Important update"
 msgid "Important Updates: %d"
-msgstr "Ważna aktualizacja"
+msgstr "Ważne aktualizacje: %d"
 
 #: app/views/patch_updates/_patch_summary.html.erb:25
-#, fuzzy
 #| msgid "Additonal updates done."
 msgid "Optional Updates: %d"
-msgstr "Zakończono aktualizacje dodatkowe."
+msgstr "Aktualizacje dodatkowe: %d"
 
 #: app/views/patch_updates/_patch_summary.html.erb:33
 msgid "Updating all. Are you sure?"
@@ -128,3 +124,4 @@ msgstr "Źródło"
 #: app/views/patch_updates/_patches.html.erb:18
 msgid "Install"
 msgstr "Zainstaluj"
+
