--- a/plugins/systemtime/po/pl/yast_webclient_systemtime.po
+++ b/plugins/systemtime/po/pl/yast_webclient_systemtime.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2009-10-18 12:29+0100\n"
+"PO-Revision-Date: 2009-10-27 20:38+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,10 +19,9 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/systemtime_controller.rb:31
-#, fuzzy
 #| msgid "Unknown option "
 msgid "Unknown timezone %s on host"
-msgstr "Nieznana opcja"
+msgstr "Nieznana strefa czasowa %s hosta"
 
 #: app/controllers/systemtime_controller.rb:64
 msgid "No permissions for time module"
@@ -76,3 +75,4 @@ msgstr "Data:"
 #: app/views/systemtime/index.rhtml:104
 msgid "Time:"
 msgstr "Godzina:"
+
