--- a/plugins/eulas/po/pl/yast_webclient_eulas.po
+++ b/plugins/eulas/po/pl/yast_webclient_eulas.po
@@ -1,6 +1,6 @@
 # @TITLE@
 # Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Przemysław Bojczuk <pbojczuk@gmail.com>, 2009.
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2006-03-23 18:35+0100\n"
-"Last-Translator: Wojciech Kapusta <wojciech@aviary.pl>\n"
+"PO-Revision-Date: 2009-10-27 20:08+0100\n"
+"Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,32 +20,30 @@ msgstr ""
 
 #: app/controllers/eulas_controller.rb:68
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "Należy zaakceptować wszystkie licencje, by móc używać tego produktu!"
 
-#: app/views/eulas/show.html.erb:1 app/views/eulas/all_accepted.erb:1
-#, fuzzy
+#: app/views/eulas/show.html.erb:1
+#: app/views/eulas/all_accepted.erb:1
 #| msgid "_Accept Agreement"
 msgid "Accept End User Licence Agreement"
-msgstr "Z_aakceptuj umowę"
+msgstr "Czy zaakceptować licencję użytkownika końcowego EULA"
 
 #: app/views/eulas/show.html.erb:4
-#, fuzzy
 #| msgid "Available Processors"
 msgid "Available translations:"
-msgstr "Dostępne procesory"
+msgstr "Dostępne tłumaczenia:"
 
 #: app/views/eulas/show.html.erb:19
-#, fuzzy
 #| msgid "The license agreement failed"
 msgid "Yes, I agree to the license agreement."
-msgstr "Zaakceptowanie licencji zakończone niepowodzeniem"
+msgstr "Tak, akceptuję zapisy licencyjne."
 
 #: app/views/eulas/show.html.erb:22
 msgid "No, I do not agree."
-msgstr ""
+msgstr "Nie, nie zgadzam się."
 
 #: app/views/eulas/all_accepted.erb:2
-#, fuzzy
 #| msgid "All packages are already installed"
 msgid "All licenses have already been accepted"
-msgstr "Pakiety już zostały zainstalowane"
+msgstr "Wszystkie licencje już zostały zaakceptowane"
+
