--- a/plugins/language/po/pl/yast_webclient_language.po
+++ b/plugins/language/po/pl/yast_webclient_language.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-07 11:17+0200\n"
-"PO-Revision-Date: 2009-10-04 20:01+0100\n"
+"PO-Revision-Date: 2009-10-27 20:09+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: app/controllers/language_controller.rb:27
 msgid "No permissions for language module"
-msgstr "Brak zezwolenia dla modułu językowego"
+msgstr "Brak wymaganych zezwoleń dla modułu językowego"
 
 #: app/controllers/language_controller.rb:56
 msgid "Settings have been written."
@@ -56,3 +56,4 @@ msgstr "Użyć kodowania UTF-8"
 #: app/views/language/index.rhtml:24
 msgid "Set root locale"
 msgstr "Ustaw locale dla konta administratora"
+
