--- a/plugins/mail_settings/po/pl/yast_webclient_mail_settings.po
+++ b/plugins/mail_settings/po/pl/yast_webclient_mail_settings.po
@@ -1,6 +1,6 @@
 # @TITLE@
 # Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Przemysław Bojczuk <pbojczuk@gmail.com>, 2009.
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2006-03-23 18:35+0100\n"
-"Last-Translator: Wojciech Kapusta <wojciech@aviary.pl>\n"
+"PO-Revision-Date: 2009-10-27 20:13+0100\n"
+"Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,54 +23,47 @@ msgid "Passwords do not match."
 msgstr "Hasła nie zgadzają się."
 
 #: app/controllers/mail_settings_controller.rb:43
-#, fuzzy
 #| msgid "Error while closing old opasswd file: %s"
 msgid "Error while saving mail settings: %s"
-msgstr "Wystąpił błąd podczas zamykania starego pliku opasswd: %s"
+msgstr "Wystąpił błąd podczas zapisywania ustawień poczty: %s"
 
 #: app/views/mail_settings/index.html.erb:21
-#, fuzzy
 #| msgid "Enter your IP address."
 msgid "Enter a valid domain name or an IP address."
-msgstr "Proszę podać adres IP."
+msgstr "Proszę podać poprawną nazwę domeny lub adres IP."
 
 #: app/views/mail_settings/index.html.erb:33
-#, fuzzy
 #| msgid "Manual Settings"
 msgid "Mail Settings"
-msgstr "Ustawienia ręczne"
+msgstr "Ustawienia poczty"
 
 #: app/views/mail_settings/index.html.erb:42
-#, fuzzy
 #| msgid "Name Server Address"
 msgid "SMTP server address"
-msgstr "Adres serwera nazw"
+msgstr "Adres serwera SMTP"
 
 #: app/views/mail_settings/index.html.erb:46
 msgid "Transport Layer Security (TLS)"
-msgstr ""
+msgstr "Protokół TLS"
 
 #: app/views/mail_settings/index.html.erb:47
 msgid "Disabled"
 msgstr "Wyłączono"
 
 #: app/views/mail_settings/index.html.erb:47
-#, fuzzy
 #| msgid "(%1 available)"
 msgid "If available"
-msgstr "(%1 dostępne)"
+msgstr "Jeżeli jest dostępny"
 
 #: app/views/mail_settings/index.html.erb:47
-#, fuzzy
 #| msgid "Alwa&ys"
 msgid "Always"
-msgstr "Za&wsze"
+msgstr "Zawsze"
 
 #: app/views/mail_settings/index.html.erb:50
-#, fuzzy
 #| msgid "Username: "
 msgid "User name"
-msgstr "Nazwa użytkownika: "
+msgstr "Nazwa użytkownika"
 
 # password dialog title
 #: app/views/mail_settings/index.html.erb:54
@@ -78,7 +71,7 @@ msgid "Password"
 msgstr "Hasło"
 
 #: app/views/mail_settings/index.html.erb:58
-#, fuzzy
 #| msgid "_Confirm Password:"
 msgid "Confirm Password"
-msgstr "_Potwierdzenie hasła:"
+msgstr "Potwierdź hasło:"
+
