--- a/plugins/permissions/po/pl/yast_webclient_permissions.po
+++ b/plugins/permissions/po/pl/yast_webclient_permissions.po
@@ -24,7 +24,7 @@ msgstr "Niepoprawna sesja, porszę zalogować się ponownie."
 
 #: app/controllers/permissions_controller.rb:178
 msgid "Permissions have been set."
-msgstr "Ustawiono uprawnienia."
+msgstr "Uprawnienia zostały ustawione."
 
 #: app/views/permissions/index.rhtml:50
 msgid "User Permissions"
