--- a/plugins/registration/po/pl/yast_webclient_registration.po
+++ b/plugins/registration/po/pl/yast_webclient_registration.po
@@ -1,6 +1,6 @@
 # @TITLE@
 # Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Przemysław Bojczuk <pbojczuk@gmail.com>, 2009.
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 12:17+0200\n"
-"PO-Revision-Date: 2006-03-23 18:35+0100\n"
-"Last-Translator: Wojciech Kapusta <wojciech@aviary.pl>\n"
+"PO-Revision-Date: 2009-10-27 20:30+0100\n"
+"Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,56 +20,54 @@ msgstr ""
 
 #: app/controllers/registration_controller.rb:14
 msgid "Invalid session, please login again."
-msgstr ""
+msgstr "Niepoprawna sesja, porszę zalogować się ponownie."
 
 #: app/controllers/registration_controller.rb:35
 #: app/controllers/registration_controller.rb:62
 msgid "No permissions for registration"
-msgstr ""
+msgstr "Brak wymaganych zezwoleń na rejestrację"
 
 #: app/controllers/registration_controller.rb:50
 msgid "Arguments for registration cannot be evaluated."
-msgstr ""
+msgstr "Nie można zwe"
 
 #: app/controllers/registration_controller.rb:81
 msgid "Registration finished successfully."
-msgstr ""
+msgstr "Zakończono pomyślnie rejestrację."
 
 #: app/controllers/registration_controller.rb:104
 msgid "Please fill out missing entries."
-msgstr ""
+msgstr "Proszę wypełnić brakujące wpisy."
 
 #: app/controllers/registration_controller.rb:107
-#, fuzzy
 #| msgid "An error occurred while reading from the installation source."
 msgid "Error occured while connecting to registration server."
-msgstr "Wystąpił błąd podczas odczytywania danych ze źródła instalacji."
+msgstr "Wystąpił błąd podczas połączenia z serwerem rejestrującym."
 
 #: app/views/registration/index.rhtml:1
 msgid "register plugin"
-msgstr ""
+msgstr "wtyczka do rejestracji"
 
 #: app/views/registration/index.rhtml:3
-#, fuzzy
 #| msgid "Administration"
 msgid "Registration"
-msgstr "Administracja"
+msgstr "Rejestracja"
 
 #: app/views/registration/index.rhtml:7
 msgid "This table gives registration settings."
-msgstr ""
+msgstr "Niniejsza tabela zawiera ustawienia rejestracyjne"
 
 #: app/views/registration/index.rhtml:25
-#, fuzzy
 #| msgid "Error reading repositories:"
 msgid "Changed Repositories"
-msgstr "Błąd odczytu repozytoriów:"
+msgstr "Zmienione repozytoria"
 
 #: app/views/registration/index.rhtml:36
 msgid "Register"
-msgstr ""
+msgstr "Zarejestruj"
 
 # cancel button label
 #: app/views/registration/index.rhtml:37
 msgid "Cancel"
 msgstr "Anuluj"
+
