update README, changes and spec file

--- a/plugins/registration/README
+++ b/plugins/registration/README
@@ -4,4 +4,4 @@ Registration
 Plugin for registration.
 
 
-Copyright (c) 2009 Novell, released under the MIT license
+Copyright (c) 2009 Novell, released under the GPLv2 license
