new package with new license

--- a/plugins/custom_services/README
+++ b/plugins/custom_services/README
@@ -15,4 +15,4 @@ custom_services.yml file present on the managed system. The example of such file
 is contained in yast2-webservice-services package.
 
 
-Copyright (c) 2009 Novell, released under the MIT license
+Copyright (c) 2009 Novell
