--- a/plugins/services/README
+++ b/plugins/services/README
@@ -4,4 +4,4 @@ Services
 Plugin for hanling system services.
 
 
-Copyright (c) 2009 Novell, released under the MIT license
+Copyright (c) 2009 Novell
