--- a/plugins/mail_settings/po/gl/yast_webclient_mail_settings.po
+++ b/plugins/mail_settings/po/gl/yast_webclient_mail_settings.po
@@ -20,7 +20,7 @@ msgstr "Os contrasinais non coinciden."
 
 #: app/controllers/mail_settings_controller.rb:36
 msgid "Mail settings have been written."
-msgstr ""
+msgstr "A configuración do correo foi gravada correctamente"
 
 #: app/controllers/mail_settings_controller.rb:44
 msgid "Error while saving mail settings: %s"
@@ -36,7 +36,7 @@ msgstr "Configuración do correo"
 
 #: app/views/mail_settings/index.html.erb:42
 msgid "Outgoing mail server (SMTP)"
-msgstr ""
+msgstr "Servidor de envío de correo (SMTP)"
 
 #: app/views/mail_settings/index.html.erb:45
 msgid "Transport Layer Security (TLS)"
