--- a/plugins/administrator/po/pl/yast_webclient_administrator.po
+++ b/plugins/administrator/po/pl/yast_webclient_administrator.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-27 20:02+0100\n"
+"PO-Revision-Date: 2009-11-08 16:40+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/administrator_controller.rb:35
 #: app/views/administrator/index.html.erb:32
@@ -28,10 +29,9 @@ msgid "Passwords do not match."
 msgstr "Hasła nie zgadzają się."
 
 #: app/controllers/administrator_controller.rb:60
-#, fuzzy
 #| msgid "Administrator Settings"
 msgid "Administrator settings have been written."
-msgstr "Ustawienia administracyjne"
+msgstr "Zapisano ustawienia administracyjne "
 
 #: app/controllers/administrator_controller.rb:70
 msgid "Error while saving administrator settings: %s"
@@ -43,7 +43,6 @@ msgid "Administrator Settings"
 msgstr "Ustawienia administracyjne"
 
 #: app/views/administrator/index.html.erb:40
-#, fuzzy
 #| msgid "Passwords do not match."
 msgid "The passwords do not match."
 msgstr "Hasła nie zgadzają się."
@@ -54,7 +53,6 @@ msgid "Password"
 msgstr "Hasło"
 
 #: app/views/administrator/index.html.erb:59
-#, fuzzy
 #| msgid "Confirm Password"
 msgid "Confirm password"
 msgstr "Potwierdzenie hasła"
