--- a/plugins/mail_settings/po/pl/yast_webclient_mail_settings.po
+++ b/plugins/mail_settings/po/pl/yast_webclient_mail_settings.po
@@ -9,24 +9,24 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-27 20:13+0100\n"
+"PO-Revision-Date: 2009-11-08 16:39+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/mail_settings_controller.rb:29
 msgid "Passwords do not match."
 msgstr "Hasła nie zgadzają się."
 
 #: app/controllers/mail_settings_controller.rb:36
-#, fuzzy
 #| msgid "All services have been refreshed."
 msgid "Mail settings have been written."
-msgstr "Odświeżono wszystkie repozytoria."
+msgstr "Ustawienia poczty zostały zapisane"
 
 #: app/controllers/mail_settings_controller.rb:44
 msgid "Error while saving mail settings: %s"
@@ -42,7 +42,7 @@ msgstr "Ustawienia poczty"
 
 #: app/views/mail_settings/index.html.erb:42
 msgid "Outgoing mail server (SMTP)"
-msgstr ""
+msgstr "Serwer poczty wychodzącej (SMTP)"
 
 #: app/views/mail_settings/index.html.erb:45
 msgid "Transport Layer Security (TLS)"
