--- a/plugins/network/po/pl/yast_webclient_network.po
+++ b/plugins/network/po/pl/yast_webclient_network.po
@@ -9,24 +9,24 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-27 20:14+0100\n"
+"PO-Revision-Date: 2009-11-08 16:42+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/network_controller.rb:43
 msgid "No permissions for network module"
 msgstr "Brak zezwolenia dla modułu sieciowego"
 
 #: app/controllers/network_controller.rb:66
-#, fuzzy
 #| msgid "Do not start"
 msgid "not set"
-msgstr "Nie uruchamiaj"
+msgstr "nie ustawione"
 
 #: app/controllers/network_controller.rb:66
 msgid "static"
@@ -41,8 +41,12 @@ msgid "Settings have been written."
 msgstr "Zapisano ustawienia."
 
 #: app/views/network/index.html.erb:38
-msgid "Invalid IP address format. The correct one is nnn.nnn.nnn.nnn for nnn between 0 and 255."
-msgstr "Niepoprawny format IP. Poprwny powinien mieć formę nnn.nnn.nnn.nnn gdzie n to wartość od 0 do 255."
+msgid ""
+"Invalid IP address format. The correct one is nnn.nnn.nnn.nnn for nnn "
+"between 0 and 255."
+msgstr ""
+"Niepoprawny format IP. Poprwny powinien mieć formę nnn.nnn.nnn.nnn gdzie n "
+"to wartość od 0 do 255."
 
 #: app/views/network/index.html.erb:64
 msgid "Network"
@@ -53,19 +57,16 @@ msgid "Interface"
 msgstr "Interfejs"
 
 #: app/views/network/index.html.erb:77
-#, fuzzy
 #| msgid "_Selection"
 msgid "Select"
-msgstr "_Wybór"
+msgstr "Wybór"
 
 #: app/views/network/index.html.erb:96 app/views/network/index.html.erb:102
-#, fuzzy
 #| msgid "IP Address"
 msgid "IP address"
 msgstr "Adres IP"
 
 #: app/views/network/index.html.erb:98
-#, fuzzy
 #| msgid "Configuration Mode"
 msgid "Configuration mode"
 msgstr "Tryb konfiguracji"
@@ -88,23 +89,20 @@ msgid "Domain"
 msgstr "Domena"
 
 #: app/views/network/index.html.erb:121
-#, fuzzy
 #| msgid "Name Servers"
 msgid "Name servers"
-msgstr "Serwery DNS"
+msgstr "Serwery nazw DNS"
 
 #: app/views/network/index.html.erb:125
-#, fuzzy
 #| msgid "&Search domains:"
 msgid "Search domains"
-msgstr "&Szukaj domen:"
+msgstr "Domeny wyszukiwania"
 
 #: app/views/network/index.html.erb:131
 msgid "Routing"
 msgstr "ROuting"
 
 #: app/views/network/index.html.erb:133
-#, fuzzy
 #| msgid "Default Route"
 msgid "Default route"
 msgstr "Trasa domyślna"
