--- a/plugins/patch_updates/po/pl/yast_webclient_patch_updates.po
+++ b/plugins/patch_updates/po/pl/yast_webclient_patch_updates.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-27 20:16+0100\n"
+"PO-Revision-Date: 2009-11-08 16:36+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/patch_updates_controller.rb:66
 msgid "Installing all patches..."
@@ -73,10 +74,9 @@ msgid "Are you sure?"
 msgstr "Na pewno?"
 
 #: app/views/patch_updates/_patch_summary.html.erb:1
-#, fuzzy
 #| msgid "An error occured when loading patch information."
 msgid "A problem occured when loading patch information."
-msgstr "Wystąpił błąd podczas wczytywania informacji o uaktualnieniach."
+msgstr "Wystąpił błąd podczas wczytywania informacji o uaktualnieniach "
 
 #: app/views/patch_updates/_patch_summary.html.erb:6
 msgid "No information about patches available"
