--- a/plugins/registration/po/pl/yast_webclient_registration.po
+++ b/plugins/registration/po/pl/yast_webclient_registration.po
@@ -9,18 +9,19 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:31+0100\n"
-"PO-Revision-Date: 2009-10-27 20:30+0100\n"
+"PO-Revision-Date: 2009-11-08 16:31+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/registration_controller.rb:14
 msgid "Invalid session, please login again."
-msgstr "Niepoprawna sesja, porszę zalogować się ponownie."
+msgstr "Niepoprawna sesja, proszę zalogować się ponownie."
 
 #: app/controllers/registration_controller.rb:35
 #: app/controllers/registration_controller.rb:62
@@ -60,10 +61,9 @@ msgid "Changed Repositories"
 msgstr "Zmienione repozytoria"
 
 #: app/views/registration/index.rhtml:40
-#, fuzzy
 #| msgid "Changed profiles"
 msgid "Changed Services"
-msgstr "Zmodyfikowane profile"
+msgstr "Zmodyfikowane usługi"
 
 #~ msgid "Register"
 #~ msgstr "Zarejestruj"
