--- a/plugins/status/po/pl/yast_webclient_status.po
+++ b/plugins/status/po/pl/yast_webclient_status.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-04 21:04+0100\n"
+"PO-Revision-Date: 2009-11-08 16:28+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/status_controller.rb:15
 msgid "Invalid session, please login again."
@@ -79,16 +80,14 @@ msgid "Save"
 msgstr "Zapisz"
 
 #: app/views/status/_status_summary.html.erb:1
-#, fuzzy
 #| msgid "An error occured when loading status information."
 msgid "An problem occured when loading status information."
 msgstr "Wystąpił błąd podczas odczytywania informacji o statusie."
 
 #: app/views/status/_status_summary.html.erb:6
-#, fuzzy
 #| msgid "No information available."
 msgid "No status information available"
-msgstr "Brak informacji"
+msgstr "Brak informacji dotyczącej statusu"
 
 #: app/views/status/_status_summary.html.erb:14
 msgid "Your system is healthy."
