--- a/plugins/system/po/pl/yast_webclient_system.po
+++ b/plugins/system/po/pl/yast_webclient_system.po
@@ -9,23 +9,24 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-04 21:07+0100\n"
+"PO-Revision-Date: 2009-11-08 16:33+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/system_controller.rb:16
 msgid "Rebooting the machine..."
-msgstr "Restart systemu..."
+msgstr "Ponowne uruchomienie systemu..."
 
 #: app/controllers/system_controller.rb:20
 #: app/controllers/system_controller.rb:23
 msgid "Cannot reboot the machine!"
-msgstr "Nie można zrestartować systemu."
+msgstr "Nie można uruchomić ponownie systemu."
 
 #: app/controllers/system_controller.rb:36
 msgid "Shuting down the machine..."
@@ -34,4 +35,4 @@ msgstr "Wyłączanie systemu..."
 #: app/controllers/system_controller.rb:40
 #: app/controllers/system_controller.rb:43
 msgid "Cannot shutdown the machine!"
-msgstr "Nie można wyłaczyć systemu!"
+msgstr "Nie można wyłączyć systemu!"
