--- a/webclient/po/pl/yast_webclient.po
+++ b/webclient/po/pl/yast_webclient.po
@@ -9,22 +9,27 @@ msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-28 11:30+0100\n"
-"PO-Revision-Date: 2009-10-27 20:02+0100\n"
+"PO-Revision-Date: 2009-11-08 18:29+0100\n"
 "Last-Translator: Przemysław Bojczuk <pbojczuk@gmail.com>\n"
 "Language-Team:  <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2;\n"
 
 #: app/controllers/application_controller.rb:52
 msgid "You must accept all EULAs before using this product!"
-msgstr "Należy zaakceptować wszystkie licencje EULA, by móc używać tego produktu!"
+msgstr ""
+"Należy zaakceptować wszystkie licencje EULA, by móc używać tego produktu!"
 
 #: app/controllers/application_controller.rb:56
-msgid "Cannot redirect to EULA. Make sure yast2-webclient-eulas package is installed"
-msgstr "Nie można uzyskać przekierowania do licencji EULA. Należy upewnić się, czy pakiet yast2-webclient-eulas został zainstalowany."
+msgid ""
+"Cannot redirect to EULA. Make sure yast2-webclient-eulas package is installed"
+msgstr ""
+"Nie można uzyskać przekierowania do licencji EULA. Należy upewnić się, czy "
+"pakiet yast2-webclient-eulas został zainstalowany."
 
 #: app/controllers/application_controller.rb:100
 msgid "Please login to continue"
@@ -128,7 +133,7 @@ msgstr "Host|Uaktualniono"
 
 #: app/helpers/application_helper.rb:4
 msgid " or "
-msgstr ""
+msgstr " lub "
 
 #: app/helpers/application_helper.rb:6
 msgid "Save"
@@ -167,7 +172,7 @@ msgstr "Brak dostępnej informacji"
 
 #: app/helpers/view_helpers/html_helper.rb:140
 msgid "There was a problem retrieving information from the server."
-msgstr ""
+msgstr "Wystąpił problem podczas pobierania informacji z serwera "
 
 #: app/views/hosts/index.html.erb:6
 msgid "Please choose a service:"
@@ -223,8 +228,11 @@ msgid "This is embarrasing...."
 msgstr "To trochę kłopotliwe..."
 
 #: app/views/shared/exception_trap.html.erb:10
-msgid "We are sorry, but WebYaST is still in alpha and there are some problems."
-msgstr "Niestety, WebYaST jest wciąż w w wersji alpha i jest jeszcze trochę nie problemów."
+msgid ""
+"We are sorry, but WebYaST is still in alpha and there are some problems."
+msgstr ""
+"Niestety, WebYaST jest wciąż w w wersji alpha i jest jeszcze trochę nie "
+"problemów."
 
 #: app/views/shared/exception_trap.html.erb:12
 #: app/views/shared/backendexception_trap.html.erb:6
@@ -232,10 +240,9 @@ msgid "Problem:"
 msgstr "Problem:"
 
 #: app/views/shared/exception_trap.html.erb:16
-#, fuzzy
 #| msgid "Problem occured on target machine."
 msgid "Problem occured on target machine"
-msgstr "Na maszynie docelowej wystąpił problem. "
+msgstr "Na maszynie docelowej wystąpił problem "
 
 #: app/views/shared/exception_trap.html.erb:22
 msgid "Please Report a bug so we can fix the problem!."
@@ -306,8 +313,11 @@ msgid "Base system setup"
 msgstr "Konfiguracja podstawowego systemu"
 
 #: app/views/controlpanel/basesystem.rhtml:3
-msgid "Your system setup was not completed. Please continue with setting up the modules."
-msgstr "Nie zakończono konfiguracji systemu. Prosimy dokończyć konfigurację modułów."
+msgid ""
+"Your system setup was not completed. Please continue with setting up the "
+"modules."
+msgstr ""
+"Nie zakończono konfiguracji systemu. Prosimy dokończyć konfigurację modułów."
 
 #: app/views/controlpanel/basesystem.rhtml:4
 msgid "Set up the system"
@@ -365,31 +375,41 @@ msgstr "Wyświetl wszystkie moduły"
 
 #: lib/error_constructor.rb:13
 msgid "Service %s is not available in the target machine"
-msgstr ""
+msgstr "Usługa %s nie jest dostępna na docelowym systemie"
 
 #: lib/error_constructor.rb:15
 msgid "Service %s is not running on the target machine"
-msgstr ""
+msgstr "Usługa %s nie jest uruchomiona na docelowym systemie"
 
 #: lib/error_constructor.rb:17
 msgid "Permission %s is not granted for user %s"
 msgstr "Nie można uzyskać zezwolenia %s dla użytkownika %s "
 
 #: lib/error_constructor.rb:19
-msgid "Policy kit exception for user %s and permission %s (untranslated message): %s"
-msgstr "Wyjątek Policy Kit dla użytkownika %s i uprawnień %s (nieprzetłumaczony komunikat): %s"
+msgid ""
+"Policy kit exception for user %s and permission %s (untranslated message): %s"
+msgstr ""
+"Wyjątek Policy Kit dla użytkownika %s i uprawnień %s (nieprzetłumaczony "
+"komunikat): %s"
 
 #: lib/error_constructor.rb:21
 msgid "A user is no longer logged to target machine. Please log in again."
 msgstr ""
+"Użytkownik nie jest już zalogowany na docelowym systemie. Proszę ponownie "
+"zalogować się."
 
 #: lib/error_constructor.rb:23
 msgid "Target system is not consistent: Missing or corrupted file %s"
-msgstr "Docelowy system jest niespójny: brakuje pliku %s lub jest on uszkodzony "
+msgstr ""
+"Docelowy system jest niespójny: brakuje pliku %s lub jest on uszkodzony "
 
 #: lib/error_constructor.rb:27
-msgid "There is no predefined ntp server at /etc/sysconfig/network/config - NETCONFIG_NTP_STATIC_SERVERS"
-msgstr "Brak predefiniowanego serwera NTP w /etc/sysconfig/network/config - NETCONFIG_NTP_STATIC_SERVERS"
+msgid ""
+"There is no predefined ntp server at /etc/sysconfig/network/config - "
+"NETCONFIG_NTP_STATIC_SERVERS"
+msgstr ""
+"Brak predefiniowanego serwera NTP w /etc/sysconfig/network/config - "
+"NETCONFIG_NTP_STATIC_SERVERS"
 
 #: lib/error_constructor.rb:29
 msgid "Error occured during ntp synchronization: %s"
