--- a/plugins/eulas/README
+++ b/plugins/eulas/README
@@ -1,7 +1,16 @@
 EULAs
 =====
 
-Plugin for accepting EULAs.
+Show the end user licence agreement (EULA) to the user. 
 
+User is shown english text of the EULA. He can also choose from the available
+translations using the drop-down list above the text. If he agrees to the terms, 
+he chooses "Yes, I agree to the licence agreement" and clicks Next.
+
+If the user does not agree to the license, he will be not allowed to continue
+through the basesystem setup workflow.
+
+For information about, how to configure EULAs, please see documentation of`
+yast2-webservice-eulas.
 
 Copyright (c) 2009 Novell, released under the GPL2 license
