--- a/webclient/po/de/yast_webclient.po
+++ b/webclient/po/de/yast_webclient.po
@@ -137,7 +137,7 @@ msgstr " oder "
 # cancel button label
 #: app/helpers/application_helper.rb:20 app/views/hosts/new.html.erb:46
 msgid "Cancel"
-msgstr "Verwerfen"
+msgstr "Abbrechen"
 
 #: app/helpers/application_helper.rb:28
 msgid "Save"
