--- a/webclient/po/cs/yast_webclient.po
+++ b/webclient/po/cs/yast_webclient.po
@@ -1,17 +1,19 @@
 # Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
 # This file is distributed under the same license as the package.
 #
+# Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient\n"
 "POT-Creation-Date: 2010-01-18 14:11+0100\n"
-"PO-Revision-Date: 2010-02-01 15:45\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"PO-Revision-Date: 2010-03-15 13:41+0100\n"
+"Last-Translator: Vojtěch Zeisek <Vojtech.Zeisek@opensuse.org>\n"
+"Language-Team: Czech <opensuse-translation@opensuse.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Lokalize 1.0\n"
 
 #: app/controllers/application_controller.rb:23
 msgid "Session timeout"
@@ -95,15 +97,15 @@ msgstr "Účet|Aktualizován:"
 
 #: app/models/account.rb:-
 msgid "Account|Remember token"
-msgstr "Účet|Token Zapamatovat"
+msgstr "Účet|Zapamatovat token"
 
 #: app/models/account.rb:-
 msgid "Account|Remember token expires at"
-msgstr "Účet|Token Zapamatovat vyprší:"
+msgstr "Účet|Zapamatovat token, vyprší::"
 
 #: app/models/account.rb:-
 msgid "Account|Salt"
-msgstr "Účet|Hodnota Salt"
+msgstr "Účet|Hodnota soli"
 
 #: app/models/host.rb:-
 msgid "host"
@@ -259,7 +261,7 @@ msgstr "WebYaST"
 
 #: app/views/layouts/main.rhtml:48
 msgid "My Appliance"
-msgstr "Moje zařízení"
+msgstr "Moje softwarové zařízení"
 
 #: app/views/layouts/main.rhtml:56
 msgid "Connected host:"
@@ -392,4 +394,5 @@ msgstr "Při synchronizaci NTP došlo k chybě: %s"
 #: lib/error_constructor.rb:31
 msgid "Error while saving administrator settings: %s"
 msgstr "Při ukládání nastavení správce došlo k chybě: %s"
+
 
