--- a/plugins/permissions/po/hu/yast_webclient_permissions.po
+++ b/plugins/permissions/po/hu/yast_webclient_permissions.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient_permissions.hu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-18 14:33+0100\n"
+"POT-Creation-Date: 2010-04-13 13:36+0200\n"
 "PO-Revision-Date: 2009-11-28 17:05+0100\n"
 "Last-Translator: Kalman Kemenczy <kkemenczy@novell.com>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
@@ -50,5 +50,6 @@ msgstr "Visszavont hozzáférések"
 msgid "Granted Permissions"
 msgstr "Kiosztott hozzáférések"
 
-#~ msgid "Back"
-#~ msgstr "Vissza"
+#: app/views/permissions/index.rhtml:159
+msgid "Back"
+msgstr "Vissza"
