--- a/plugins/status/po/hu/yast_webclient_status.po
+++ b/plugins/status/po/hu/yast_webclient_status.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yast_webclient_status.hu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-18 14:33+0100\n"
-"PO-Revision-Date: 2010-03-24 15:45+0100\n"
+"POT-Creation-Date: 2010-04-13 13:36+0200\n"
+"PO-Revision-Date: 2010-04-16 09:17+0200\n"
 "Last-Translator: Kalman Kemenczy <kkemenczy@novell.com>\n"
 "Language-Team: Hungarian <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -14,23 +14,23 @@ msgstr ""
 "X-Generator: Lokalize 1.0\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/status_controller.rb:116
+#: app/controllers/status_controller.rb:130
 msgid "No data found for showing system status."
 msgstr "Nem található adat a rendszerállapot megjelenítéséhez."
 
-#: app/controllers/status_controller.rb:147
+#: app/controllers/status_controller.rb:187
 msgid "Limits exceeded for "
 msgstr "Ennek a határértéknek a tállépése: "
 
-#: app/controllers/status_controller.rb:253
+#: app/controllers/status_controller.rb:316
 msgid "exceeded"
 msgstr "túllépett"
 
-#: app/controllers/status_controller.rb:267
+#: app/controllers/status_controller.rb:330
 msgid "undercut"
 msgstr "alatti"
 
-#: app/controllers/status_controller.rb:369
+#: app/controllers/status_controller.rb:432
 msgid "Limits have been written."
 msgstr "A határértékek mentése befejeződött."
 
@@ -38,7 +38,7 @@ msgstr "A határértékek mentése befejeződött."
 msgid "Only numbers are valid !"
 msgstr "Csak a számok érvényesek !"
 
-#: app/views/status/edit.html.erb:51 app/views/status/index.html.erb:26
+#: app/views/status/edit.html.erb:51 app/views/status/index.html.erb:27
 msgid "Status"
 msgstr "Állapot"
 
@@ -54,35 +54,15 @@ msgstr "alattiak"
 msgid "exceeds"
 msgstr "túllépettek"
 
-#: app/views/status/index.html.erb:53
-msgid "Show last"
-msgstr "Utolsó megjelenítése"
+#: app/views/status/index.html.erb:71
+msgid "details"
+msgstr "részletek"
 
-#: app/views/status/index.html.erb:54
-msgid "5 Minutes"
-msgstr "5 perc"
+#: app/views/status/index.html.erb:87
+msgid "Details"
+msgstr "Részletek"
 
-#: app/views/status/index.html.erb:55
-msgid "15 Minutes"
-msgstr "15 perc"
-
-#: app/views/status/index.html.erb:56
-msgid "30 Minutes"
-msgstr "30 perc"
-
-#: app/views/status/index.html.erb:57
-msgid "1 Hour"
-msgstr "1 óra"
-
-#: app/views/status/index.html.erb:58
-msgid "6 Hours"
-msgstr "6 óra"
-
-#: app/views/status/index.html.erb:59
-msgid "12 Hours"
-msgstr "12 óra"
-
-#: app/views/status/index.html.erb:100
+#: app/views/status/index.html.erb:143
 msgid "Edit Limits"
 msgstr "Határértékek szerkesztése"
 
@@ -90,17 +70,101 @@ msgstr "Határértékek szerkesztése"
 msgid "A problem occured when loading status information."
 msgstr "Hiba történt az állapotinformáció betöltése közben."
 
-#: app/views/status/_status_summary.html.erb:1
+#: app/views/status/_status_graph.html.erb:91
+msgid "Show last"
+msgstr "Utolsó megjelenítése"
+
+#: app/views/status/_status_graph.html.erb:92
+msgid "5 Minutes"
+msgstr "5 perc"
+
+#: app/views/status/_status_graph.html.erb:93
+msgid "15 Minutes"
+msgstr "15 perc"
+
+#: app/views/status/_status_graph.html.erb:94
+msgid "30 Minutes"
+msgstr "30 perc"
+
+#: app/views/status/_status_graph.html.erb:95
+msgid "1 Hour"
+msgstr "1 óra"
+
+#: app/views/status/_status_graph.html.erb:96
+msgid "6 Hours"
+msgstr "6 óra"
+
+#: app/views/status/_status_graph.html.erb:97
+msgid "12 Hours"
+msgstr "12 óra"
+
+#: app/views/status/_status_summary.html.erb:2
 msgid "An problem occured when loading status information."
 msgstr "Hiba történt az állapotinformáció betöltése közben."
 
-#: app/views/status/_status_summary.html.erb:10
+#: app/views/status/_status_summary.html.erb:12
+msgid "Cannot read system status - you have been logged out."
+msgstr "A rendszerállapot nem olvasható - nincs bejelentkezve."
+
+#: app/views/status/_status_summary.html.erb:15
 msgid "Your system is healthy."
 msgstr "A rendszer stabil."
 
-#: app/views/status/_status_summary.html.erb:14
-msgid "start"
-msgstr "indítás"
+#: app/views/status/_status_summary.html.erb:20
+msgid "Start collectd"
+msgstr "collectd indítása"
+
+#: app/views/status/_status_summary.html.erb:28
+msgid "Loading system information"
+msgstr "Rendszerinformáció betöltése"
+
+#: app/views/status/_status_progress.html.erb:7
+msgid "Checking system status"
+msgstr "Rendszerinformáció ellenőrzése"
+
+#: lib/plugin_translation.rb:25
+msgid "Registration is missing"
+msgstr "HIányzik a regisztráció"
+
+#: lib/plugin_translation.rb:26
+msgid "Please register your system in order to get updates."
+msgstr "Regisztrálja a rendszert, hogy megkapja a frissítéseket."
+
+#: lib/plugin_translation.rb:27
+msgid "register"
+msgstr "regisztráció"
+
+#: lib/plugin_translation.rb:29
+msgid "Mail configuration test not confirmed"
+msgstr "A levelezés beállításának vizsgálata nincs ellenőrizve"
+
+#: lib/plugin_translation.rb:30
+msgid ""
+"While configuring mail, a test mail was sent to %s . Was the mail delivered "
+"to this address?<br>If so, confirm it by pressing the button. Otherwise "
+"check your mail configuration again."
+msgstr ""
+"A levelezés beállításakor egy próbalevél került elküldésre a következő "
+"címre: %s. Megérkezett ez a levél?<br> Amennyiben igen, akkor nyomja meg a "
+"gombot. Ellenkező esetben ellenőrizze újra a levelezési beállításokat, vagy "
+"a  '/var/log/mail' fájlt."
+
+#: lib/plugin_translation.rb:33
+msgid ""
+"It was not possible to retrieve the full hostname of the machine. If the "
+"mail could not be delivered, consult the network and/or mail configuration "
+"with your network administrator."
+msgstr ""
+"Nem lehetett megtudni a gép teljes nevét. Amennyiben a levél nem érkezett "
+"meg, akkor beszéljen a hálózattal és/vagy a levelezőrendszerrel foglalkozó "
+"rendszergazdával."
+
+#: lib/plugin_translation.rb:34
+msgid "Test mail received"
+msgstr "A tesztlevél megérkezett"
+
+#~ msgid "start"
+#~ msgstr "indítás"
 
 #~ msgid "Cancel"
 #~ msgstr "Mégsem"
