licenses: user cannot choose translation independently from the other language settings. Reflect this in README.

--- a/plugins/eulas/README
+++ b/plugins/eulas/README
@@ -4,8 +4,8 @@ EULAs
 Show the end user licence agreement (EULA) to the user. 
 
 User is shown english text of the EULA. He can also choose from the available
-translations using the drop-down list above the text. If he agrees to the terms, 
-he chooses "Yes, I agree to the licence agreement" and clicks Next.
+translations by changing current language used by WebYaST UI. If he agrees to 
+the terms, he chooses "Yes, I agree to the licence agreement" and clicks Next.
 
 If the user does not agree to the license, he will be not allowed to continue
 through the basesystem setup workflow.
