added translation tags

--- a/plugins/language/shortcuts.yml
+++ b/plugins/language/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /language
   groups: [ System ]
   tags: [ language ]
-  title: Language
-  description: Set language
+  title: _("Language")
+  description: _("Set language")
   resources: [ language ]
 
